@@ -128,6 +128,8 @@ Other Changes
 ---------------------
 * SOLR-17024: Remove support for the long-defunct "collectionDefaults" clusterprops key (Jason Gerlowski)
 
+* SOLR-17072: package CLI tool prints error JSONPath (Mikhail Khludnev)
+
 ==================  9.4.0 ==================
 New Features
 ---------------------
